k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: build-analyzer
  labels:
    app: build-analyzer
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  - port: 9090
    targetPort: metrics
    protocol: TCP
    name: metrics
  selector:
    app: build-analyzer
